viz/android: Fix DCHECK failure in SingleThreadProxy::SetNeedsAnimate

Calling DidSwapBuffers can result in a call into SetNeedsAnimate in
the same call stack. DidSubmitCompositorFrame is in a scope of a
DebugScopedSetImplThread object so calling DidSwapBuffers inside of it
triggers the DCHECK in SetNeedsAnimate that expects us to be on the
main thread, so move the DidSwapBuffers call into
DidReceiveCompositorFrameAck that doesn't have the same problem.
DidReceiveCompositorFrameAck is also a closer signal to DidSwapBuffers
than DidSubmitCompositorFrame is.

Bug: 847258
Change-Id: Ie02c28e0063022b7f404b91067b7805b8c1efb6b
Reviewed-on: https://chromium-review.googlesource.com/1075669
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562296}
Former-commit-id: 6f823e1ea928226ca175f1cb094620ccc083490d